# ironclaw-cursor-brain

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.zh-CN.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
doc/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  TECHNICAL.md  TECHNICAL.zh-CN.md  ironclaw-provider-contract.md  provider-definition.json
src/: config.rs  cursor.rs  main.rs  openai.rs  server.rs  service.rs  session.rs
