[package]
name = "ironclaw-cursor-brain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json", "macros"] }
futures-util = "0.3"
async-stream = "0.3"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.12"
async-trait = "0.1"
dirs = "6"
